Add section Destinations

--- a/index.html
+++ b/index.html
@@ -28,5 +28,19 @@
   </div>
 </section>
 
+<section class="destinations">
+  <h3 class="title">Some of our destinations: </h3>
+  <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some
+  pictures from people who have had elevated experiences with us</p>
+  <hr>
+
+  <ul class="grid">
+    <li class="small"></li>
+    <li class="large"></li>
+    <li class="large"></li>
+    <li class="small"></li>
+  </ul>
+</section>
+
 </body>
 </html>
