--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Mountain Travel</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -76,6 +77,31 @@
     </ul>
   </section>
 
+    <section class="testimonials">
+      <h3 class="title">Testimonials from our adventurers:</h3>
+      <hr>
+      <p class="quote">Wow! This tour made me realize how much I love mountains. After going on one of these tours, I can
+        safely say that they are my favorite geographic feature, and my favorite word that starts with M.</p>
+      <p class="author">- Colt Steele</p>
+      <p class="quote">I never understood why people cared so much about mountains. But then I went on one of these tours.
+        Now I can't understand people who <em>don't</em> care about mountains!</p>
+      <p class="author">- Elie Schoppik</p>
+      <p class="quote">If you want to understand the universe, head to the mountains. I mean, seriously. It's like, woah.
+        You know? It's like that.</p>
+      <p class="author">- Tim Garcia</p>
+    </section>
+    
+    <section class="contact">
+      <h3 class="title">Learn more</h3>
+      <p>Want to know about our upcoming mountain-related events, or come to one of our mixers? Just sign up for our mailing
+        list. No spam from us, we promise! Except for the spam we give you to keep up your energy while you're hiking
+        through the mountains. We have tons of that.</p>
+      <hr>
+      <form>
+        <input type="email" placeholder="Email">
+        <a href="#" class="btn">Subscribe now</a>
+      </form>
+    </section>
 
 </body>
 </html>
