fix: rename class, change animation

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <header>
   <h2><a href="#">Mountain Travel</a></h2>
   <nav>
-    <li><a href="#">Tours</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#tours">Tours</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
   </nav>
 </header>
 
@@ -43,7 +43,7 @@
   </ul>
 </section>
 
-  <section class="packages">
+  <section class="packages" id="tours">
     <h3 class="title">Tour Packages</h3>
     <p>We offer a variety of mountaineering packages. Whether you've climbed Everest or don't even know what a mountain
       is, we've got the perfect vacation for you.</p>
@@ -77,18 +77,18 @@
     </ul>
   </section>
 
-    <section class="testimonials">
+    <section class="testimonials" id="about">
       <h3 class="title">Testimonials from our adventurers:</h3>
       <hr>
       <p class="quote">Wow! This tour made me realize how much I love mountains. After going on one of these tours, I can
         safely say that they are my favorite geographic feature, and my favorite word that starts with M.</p>
-      <p class="author">- Colt Steele</p>
+      <p class="author">- Colt Steele - </p>
       <p class="quote">I never understood why people cared so much about mountains. But then I went on one of these tours.
         Now I can't understand people who <em>don't</em> care about mountains!</p>
-      <p class="author">- Elie Schoppik</p>
+      <p class="author">- Elie Schoppik -</p>
       <p class="quote">If you want to understand the universe, head to the mountains. I mean, seriously. It's like, woah.
         You know? It's like that.</p>
-      <p class="author">- Tim Garcia</p>
+      <p class="author">- Tim Garcia -</p>
     </section>
     
     <section class="contact">
